--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodekb",
   "version": "1.0.0",
-  "description": "simple knowledge base app",
+  "description": "simple Node.js Express Article app",
   "main": "app.js",
   "scripts": {
     "start": "node app"
